--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "codex-playground",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "AI-Powered Code Editor & DSA Roadmap",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "npm run dev"
   },
   "dependencies": {
     "@google/genai": "^0.1.0",
