--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
   "name": "codex-playground",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
-    "vite": "^7.2.4",
-    "@vitejs/plugin-react": "^5.1.1",
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
-    "@google/genai": "^1.30.0",
-    "lucide-react": "^0.555.0",
-    "react-markdown": "^10.1.0",
+    "@google/genai": "^0.1.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "nodemailer": "^7.0.11",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7",
-    "dotenv": "^17.2.3",
-    "firebase": "^12.6.0",
-    "url": "^0.11.4"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "firebase": "^10.12.0",
+    "lucide-react": "^0.378.0",
+    "monaco-editor": "^0.48.0",
+    "nodemailer": "^6.9.13",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
