--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev:all": "concurrently \"npm run start\" \"npm run dev\""
   },
   "dependencies": {
     "@google/genai": "^0.1.0",
@@ -16,7 +17,7 @@
     "express": "^4.19.2",
     "firebase": "^10.12.0",
     "lucide-react": "^0.378.0",
-    "monaco-editor": "^0.48.0",
+    "monaco-editor": "0.44.0",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,6 +29,7 @@
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
