--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,7 +11,7 @@
     "dev:all": "concurrently \"npm run start\" \"npm run dev\""
   },
   "dependencies": {
-    "@google/genai": "latest",
+    "@google/genai": "*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -33,16 +32,7 @@
     "concurrently": "^8.2.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.2.2",
+    "typescript": "^5.4.5",
     "vite": "^5.2.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Aditya90456/Aditya-Bakshi.git"
-  },
-  "author": "Aditya90456",
-  "license": "MIT"
+  }
 }
