--- a/package.json
+++ b/package.json
@@ -19,20 +19,23 @@
     "lucide-react": "^0.378.0",
     "monaco-editor": "^0.44.0",
     "nodemailer": "^6.9.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.0"
+    "typescript": "^5.5.0",
+    "vite": "^5.4.0"
+  },
+  "overrides": {
+    "node-domexception": "1.0.0"
   }
 }
