feat: Update dependencies and CI config
Updates React and other dependencies to the latest versions. Removes the old Gulp-based CI workflow and simplifies the tsconfig include path.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["node"]
   },
-  "include": ["src", "**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
